shayhowe: ch 3 and 4 plus i create other pages; register &co.

--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,8 @@
 	<header class="container">
 		
 			<h1>
-				<a href="index.html"> Styles conference</a>
+				<a href="index.html"> Styles conference
+				</a>
 			</h1>
 			<h3>February 24&ndash;26th &mdash; Hyderabad, IN </h3>
 			<nav>
@@ -18,7 +19,7 @@
     			<a href="schedule.html">Schedule</a>
     			<a href="venue.html">Venue</a>
     			<a href="register.html">Register</a>
-			</nav>
+		</nav>
 		
 	</header>
 
@@ -31,6 +32,7 @@
 	</section>
 	<section class="container">
 			<section>
+				<!-- <section>
 				<a href="speakers.html">
 					<h5>Speakers</h5>
 					<h3>World-Class Speakers</h3>
@@ -50,7 +52,7 @@
 					<h3>Code Astra Theatre</h3>
 				</a>
 				<p>Within the heart of downtown Hyderabad, Code Astra theatre will provide a beautiful conference venue</p>
-			</section>
+			</section> -->
 	</section>
 	<footer class="container">
 		<small>&copy; Styles Conference </small>
