--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 </head>
 <body>
-	<header class="container">
+	<header class="container group">
 		
-			<h1>
-				<a href="index.html"> Styles conference</a>
+			<h1 class="logo">
+				<a href="index.html"> Styles <br> conference</a>
 			</h1>
 			<h3>February 24&ndash;26th &mdash; Hyderabad, IN </h3>
 			<nav>
@@ -29,30 +29,33 @@
 
 		<a class="btn btn-alt" href="register.html">Register now</a>
 	</section>
-	<section class="container">
-			<section>
+	<section class="grid">
+			<!-- speakers -->
+			<section class="col-1-3">
 				<a href="speakers.html">
 					<h5>Speakers</h5>
 					<h3>World-Class Speakers</h3>
 				</a>
 				<p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-			</section>
-			<section>
+			</section><!-- 
+			Schedule 
+			--><section class="col-1-3">
 				<a href="schedule.html">
 					<h5>Schedule </h5>
 					<h3>Three Inspiring Days</h3>
 				</a>
 				<p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times</p>
-			</section>
-			<section>
+			</section><!-- 
+			Venue 
+			--><section class="col-1-3">
 				<a href="venue.html">
 					<h5>Venue</h5>
 					<h3>Code Astra Theatre</h3>
 				</a>
-				<p>Within the heart of downtown Hyderabad, Code Astra theatre will provide a beautiful conference venue</p>
+				<p>Within the heart of downtown Hyderabad, Code Astra Theatre will provide a beautiful conference venue</p>
 			</section>
 	</section>
-	<footer class="container">
+	<footer class="container group primary-footer">
 		<small>&copy; Styles Conference </small>
 		<nav>
 			<a href="index.html">Home</a>
