--- a/venue.html
+++ b/venue.html
@@ -6,11 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
 </head>
 <body>
-	<header class="container">
+	<header class="container group">
 		
-			<h1>
-				<a href="index.html"> Styles conference
-				</a>
+			<h1 class="logo">
+				<a href="index.html"> Styles <br> conference</a>
 			</h1>
 			<h3>February 24&ndash;26th &mdash; Hyderabad, IN </h3>
 			<nav>
@@ -19,7 +18,7 @@
     			<a href="schedule.html">Schedule</a>
     			<a href="venue.html">Venue</a>
     			<a href="register.html">Register</a>
-		</nav>
+			</nav>
 		
 	</header>
 
@@ -54,7 +53,7 @@
 				<p>Within the heart of downtown Hyderabad, Code Astra theatre will provide a beautiful conference venue</p>
 			</section> -->
 	</section>
-	<footer class="container">
+	<footer class="container group primary-footer">
 		<small>&copy; Styles Conference </small>
 		<nav>
 			<a href="index.html">Home</a>
