--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1 class="logo">
 				<a href="index.html"> Styles <br> conference</a>
 			</h1>
-			<h3>February 24&ndash;26th &mdash; Hyderabad, IN </h3>
+			<h3 class="tagline">February 24&ndash;26th &mdash; Hyderabad, IN </h3>
 			<nav>
 				<a href="index.html">Home</a>
     			<a href="speakers.html">Speakers</a>
