--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Styles Conference</title>
 	<link rel="stylesheet" type="text/css" href="assets/main.css">
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header class="container group">
@@ -12,7 +13,7 @@
 				<a href="index.html"> Styles <br> conference</a>
 			</h1>
 			<h3 class="tagline">February 24&ndash;26th &mdash; Hyderabad, IN </h3>
-			<nav>
+			<nav class="nav primary-nav">
 				<a href="index.html">Home</a>
     			<a href="speakers.html">Speakers</a>
     			<a href="schedule.html">Schedule</a>
@@ -55,7 +56,7 @@
 	</section>
 	<footer class="container group primary-footer">
 		<small>&copy; Styles Conference </small>
-		<nav>
+		<nav class="nav">
 			<a href="index.html">Home</a>
     		<a href="speakers.html">Speakers</a>
     		<a href="schedule.html">Schedule</a>
