--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<header class="container group">
+	<header class="primary-header container group">
 		
 			<h1 class="logo">
 				<a href="index.html"> Styles <br> conference</a>
@@ -30,31 +30,33 @@
 
 		<a class="btn btn-alt" href="register.html">Register now</a>
 	</section>
-	<section class="grid">
+		<section class="row">
+			<section class="grid">
 			<!-- speakers -->
-			<section class="teaser col-1-3">
-				<a href="speakers.html">
-					<h5>Speakers</h5>
-					<h3>World-Class Speakers</h3>
-				</a>
-				<p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-			</section><!-- 
-			Schedule 
-			--><section class="col-1-3">
+				<section class="teaser col-1-3">
+					<a href="speakers.html">
+						<h5>Speakers</h5>
+						<h3>World-Class Speakers</h3>
+					</a>
+					<p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+				</section><!-- 
+				Schedule 
+				--><section class="col-1-3">
 				<a href="schedule.html">
 					<h5>Schedule </h5>
 					<h3>Three Inspiring Days</h3>
 				</a>
 				<p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times</p>
-			</section><!-- 
-			Venue 
-			--><section class="col-1-3">
-				<a href="venue.html">
-					<h5>Venue</h5>
-					<h3>Code Astra Theatre</h3>
-				</a>
-				<p>Within the heart of downtown Hyderabad, Code Astra Theatre will provide a beautiful conference venue</p>
-			</section>
+				</section><!-- 
+				Venue 
+				--><section class="col-1-3">
+					<a href="venue.html">
+						<h5>Venue</h5>
+						<h3>Code Astra Theatre</h3>
+					</a>
+					<p>Within the heart of downtown Hyderabad, Code Astra Theatre will provide a beautiful conference venue</p>
+				</section>
+		</section>
 	</section>
 	<footer class="container group primary-footer">
 		<small>&copy; Styles Conference </small>
