--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<header class="container group">
+	<header class="primary-header container group">
 		
 			<h1 class="logo">
 				<a href="index.html"> Styles <br> conference</a>
@@ -23,36 +23,15 @@
 		
 	</header>
 
-	<section class="hero container">
-		<h2> Dedicated to the Craft of building Websites </h2>
-		
-		<p>Every year the brightest web designers and front-end developers descend on Hyderabad to discuss the latest technologies. Join us this February! </p>
+	<section class="row-alt">
+  		<div class="lead container">
 
-		<a class="btn btn-alt" href="register.html">Register now</a>
+    		<h1>Register</h1>
+
+			<p>We&#8217;re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies. Prepare for an inspiration extravaganza.</p> 
+		</div>
 	</section>
-	<section class="container">
-			<section>
-				<!-- <section>
-				<a href="speakers.html">
-					<h5>Speakers</h5>
-					<h3>World-Class Speakers</h3>
-				</a>
-				<p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-			</section>
-			<section>
-				<a href="schedule.html">
-					<h5>Schedule </h5>
-					<h3>Three Inspiring Days</h3>
-				</a>
-				<p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times</p>
-			</section>
-			<section>
-				<a href="venue.html">
-					<h5>Venue</h5>
-					<h3>Code Astra Theatre</h3>
-				</a>
-				<p>Within the heart of downtown Hyderabad, Code Astra theatre will provide a beautiful conference venue</p>
-			</section> -->
+				
 	</section>
 	<footer class="container group primary-footer">
 		<small>&copy; Styles Conference </small>
