--- a/speakers.html
+++ b/speakers.html
@@ -35,23 +35,24 @@
 	</section>
 	<section class="row">
 	  <div class="grid">
-			<section id="chris-mills">
+			<section id="carolyn-chandler">
 				  <div class="col-2-3">
-				    <h2>Chris Mills</h2>
-				    <h5>Heavy Metal Coding</h5>
+				    <h2>Carolyn Chandler</h2>
+				    <h5>The Business of Play</h5>
 				    
-				    <p>In this unconventional talk, Chris Mills will encourage you to pick up some drum sticks in addition to your laptop, and beat out a rhythm of learning – both of code and drum beats! You’ll learn basic JavaScript and CSS, plus beginner’s heavy metal drum patterns. The two are a marriage made in heaven, as nothing is a better antidote to code frustration than beating seven shades of **** out of a drum kit</p>
+				    <p>Play isn’t just for kids and heavy gamers. Anyone with a Foursquare account knows that – and the stickiness of a badge and a leaderboard. But a good, playful user experience isn’t about those surface elements either – it’s about creating an environment with well-understood rules, meaningful objectives, and a sense of fun. Whether you’re trying to encourage people – or yourself – to save money or to lose weight, a focus on game mechanics and play could be the trump card you’re looking for.</p>
 				    
-				    <h5>About Chris</h5>
+				    <h5>About Carolyn</h5>
 
-				    <p>Chris Mills is a Senior Tech Writer at Mozilla, where he writes docs and demos about open web apps, Firefox OS and related subjects. He loves tinkering around with HTML, CSS, JavaScript and other web technologies, and gives occasional tech talks at conferences and universities.</p>
+				    <p>Carolyn Chandler has been working in the field of User Experience Design for over 14 years. She was an adjunct professor at DePaul University and is the UX Design Instructor at The Starter League, where she first developed her activity-based approach for teaching core design concepts. Carolyn is the co-founder of The School for Digital Craftsmanship and co-author of two books, A Project Guide to UX Design and Adventures in Experience Design.</p>
 				  </div><!--
 
 				  --><aside class="col-1-3">
 				    	<div class="speaker-info">
+				    		 <img src="assets/images/speakers/carolyn-chandler.jpg" alt="Carolyn Chandler">
 						    <ul>
-						        <li><a href="https://twitter.com/shayhowe">@saintchris</a></li>
-						        <li><a href="http://learn.shayhowe.com/">learn.chrismills.com</a></li>
+						        <li><a href="https://twitter.com/chanan">@chanan</a></li>
+						        <li><a href="http://dhalo.com/">dhalo.com</a></li>
 						    </ul>
 						</div>
 				  </aside>
@@ -70,6 +71,7 @@
 
 				  --><aside class="col-1-3">
 				    	<div class="speaker-info">
+				    		 <img src="assets/images/speakers/shay-howe.jpg" alt="Shay Howe">
 						    <ul>
 						        <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
 						        <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
