--- a/venue.html
+++ b/venue.html
@@ -30,7 +30,29 @@
 
     		<h1>Venue</h1>
 
-			<p>We&#8217;re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies. Prepare for an inspiration extravaganza.</p> 
+			<p>The conference is held at The Code Astra Theatre, a beautiful historical landmark. The conference hotel, Hotel Hyderabad, is a short walk away down State Street.</p> 
+		</div>
+	</section>
+	<section class="row">
+		<div class="grid">
+			<section class="venue-theatre">
+				<div class="col-1-3">
+					<h2>Code Astra Theatre</h2>
+					<p>175 Sriram Nagar Colony <br> Kondapur, Hyderabad, IN 84000</p>
+					<p><a href="http://www.thechicagotheatre.com/">thechicagotheatre.com</a> <br> (312) 462-6300</p>
+				</div><!--
+
+				--><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3805.944019049719!2d78.35045085003713!3d17.46239330517597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb93c07c0647cd%3A0x26d4d2e5e4c8ac1f!2sCode+Astra!5e0!3m2!1sen!2sin!4v1457342280319" allowfullscreen></iframe>
+    		</section>
+    		<section class="venue-hotel">
+    			<div class="col-1-3">
+    				<h2>Hotel Hyderabad</h2>
+    				<p>333 N Dearborn Colony  <br> Kondapur, Hyderabad, IN 84000</p>
+    				<p><a href="http://www.thechicagotheatre.com/">thechicagotheatre.com</a> <br> (312) 245-0333</p>
+    			</div><!--
+
+				--><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3805.7275245465485!2d78.37043265003719!3d17.472750804878768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb92320a27f5a9%3A0xf7ffe9c0885c159b!2sHotel+Novotel+Hyderabad+Convention+Centre!5e0!3m2!1sen!2sin!4v1457342771622" allowfullscreen></iframe>
+    		</section>
 		</div>
 	</section>
 	<footer class="container group primary-footer">
