--- a/schedule.html
+++ b/schedule.html
@@ -12,7 +12,7 @@
 			<h1 class="logo">
 				<a href="index.html"> Styles <br> conference</a>
 			</h1>
-			<h3 class="tagline">February 24&ndash;26th &mdash; Hyderabad, IN </h3>
+			<h3 class="tagline">February 24&ndash;26th &mdash;  Kondapur, Hyderabad, IN </h3>
 			<nav class="nav primary-nav">
 			  <ul>
 			    <li><a href="index.html">Home</a></li><!--
