Add angularjs to the site and use ui-router for the pages

--- a/venue.html
+++ b/venue.html
@@ -1,43 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Styles Conference</title>
-	<link rel="stylesheet" type="text/css" href="assets/main.css">
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
-</head>
-<body>
-	<header class="primary-header container group">
-		
-			<h1 class="logo">
-				<a href="index.html"> Styles <br> conference</a>
-			</h1>
-			<h3 class="tagline">February 24&ndash;26th &mdash; Kondapur, Hyderabad, IN </h3>
-			<nav class="nav primary-nav">
-			  <ul>
-			    <li><a href="index.html">Home</a></li><!--
-			    --><li><a href="speakers.html">Speakers</a></li><!--
-			    --><li><a href="schedule.html">Schedule</a></li><!--
-			    --><li><a href="venue.html">Venue</a></li><!--
-			    --><li><a href="register.html">Register</a></li>
-			  </ul>
-			</nav>
-		
-	</header>
-
+<!-- venue.html -->
 	<section class="row-alt">
   		<div class="lead container">
 
     		<h1>Venue</h1>
 
-			<p>The conference is held at The Code Astra Theatre, a beautiful historical landmark. The conference hotel, Hotel Hyderabad, is a short walk away down State Street.</p> 
+			<p>The conference is held at The Code Astra Theatre, a beautiful historical landmark. The conference hotel, Hotel Hyderabad, is a short walk away down State Street.</p>
 		</div>
 	</section>
 	<section class="row">
 		<div class="grid">
 			<section class="venue-theatre">
 				<div class="col-1-3">
-					<h2>Code Astra Theatre</h2>
+					<h2>Chicago Theatre</h2>
 					<p>175 Sriram Nagar Colony <br> Kondapur, Hyderabad, IN 84000</p>
 					<p><a href="http://www.thechicagotheatre.com/">thechicagotheatre.com</a> <br> (312) 462-6300</p>
 				</div><!--
@@ -55,17 +29,3 @@
     		</section>
 		</div>
 	</section>
-	<footer class="container group primary-footer">
-		<small>&copy; Styles Conference </small>
-		<nav class="nav">
-		  <ul>
-		    <li><a href="index.html">Home</a></li><!--
-		    --><li><a href="speakers.html">Speakers</a></li><!--
-		    --><li><a href="schedule.html">Schedule</a></li><!--
-		    --><li><a href="venue.html">Venue</a></li><!--
-		    --><li><a href="register.html">Register</a></li>
-		  </ul>
-		</nav>
-	</footer>
-</body>
-</html>
