--- a/register.html
+++ b/register.html
@@ -1,36 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Styles Conference</title>
-	<link rel="stylesheet" type="text/css" href="assets/main.css">
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
-</head>
-<body>
-	<header class="primary-header container group">
-		
-			<h1 class="logo">
-				<a href="index.html"> Styles <br> conference</a>
-			</h1>
-			<h3 class="tagline">February 24&ndash;26th &mdash; Kondapur, Hyderabad, IN </h3>
-			<nav class="nav primary-nav">
-			  <ul>
-			    <li><a href="index.html">Home</a></li><!--
-			    --><li><a href="speakers.html">Speakers</a></li><!--
-			    --><li><a href="schedule.html">Schedule</a></li><!--
-			    --><li><a href="venue.html">Venue</a></li><!--
-			    --><li><a href="register.html">Register</a></li>
-			  </ul>
-			</nav>
-		
-	</header>
-
+<!-- register.html -->
 	<section class="row-alt">
   		<div class="lead container">
 
     		<h1>Register</h1>
 
-			<p>Every year we aim to have an unbelievable time, and this year we’d love it for you to join us. Conference passes only cost Rs 199, one of the best values you’ll find.</p> 
+			<p>Every year we aim to have an unbelievable time, and this year we’d love it for you to join us. Conference passes only cost Rs 199, one of the best values you’ll find.</p>
 		</div>
 	</section>
 	<section class="row">
@@ -49,9 +23,8 @@
 				    <li>One full day of workshops and two full days of presentations</li>
 				    <li>Hosted at The Chicago Theatre, a historical landmark</li>
 				    <li>August in Chicago is simply amazing</li>
-				  </ul> 
+				  </ul>
 		    </section><!--
-
 		    --><form class="col-1-3" action="#" method="post">
 
 			  <fieldset class="register-group">
@@ -89,18 +62,3 @@
 			</form>
 		  </div>
 	</section>
-			
-	<footer class="container group primary-footer">
-		<small>&copy; Styles Conference </small>
-		<nav class="nav">
-		  <ul>
-		    <li><a href="index.html">Home</a></li><!--
-		    --><li><a href="speakers.html">Speakers</a></li><!--
-		    --><li><a href="schedule.html">Schedule</a></li><!--
-		    --><li><a href="venue.html">Venue</a></li><!--
-		    --><li><a href="register.html">Register</a></li>
-		  </ul>
-		</nav>
-	</footer>
-</body>
-</html>
