--- a/schedule.html
+++ b/schedule.html
@@ -1,41 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Styles Conference</title>
-	<link rel="stylesheet" type="text/css" href="assets/main.css">
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
-</head>
-<body>
-	<header class="primary-header container group">
-		
-			<h1 class="logo">
-				<a href="index.html"> Styles <br> conference</a>
-			</h1>
-			<h3 class="tagline">February 24&ndash;26th &mdash;  Kondapur, Hyderabad, IN </h3>
-			<nav class="nav primary-nav">
-			  <ul>
-			    <li><a href="index.html">Home</a></li><!--
-			    --><li><a href="speakers.html">Speakers</a></li><!--
-			    --><li><a href="schedule.html">Schedule</a></li><!--
-			    --><li><a href="venue.html">Venue</a></li><!--
-			    --><li><a href="register.html">Register</a></li>
-			  </ul>
-			</nav>
-		
-	</header>
-
+<!-- schedule.html -->
 	<section class="row-alt">
   		<div class="lead container">
 
     		<h1>Schedule</h1>
 
-			<p>We&#8217;re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies. Prepare for an inspiration extravaganza.</p> 
+			<p>We&#8217;re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies. Prepare for an inspiration extravaganza.</p>
 		</div>
 	</section>
 	<section class="row">
 		<div class="container">
-			
+
 			<table>
 				<thead>
 					<tr>
@@ -101,17 +75,3 @@
 			</table>
 		</div>
 	</section>
-	<footer class="container group primary-footer">
-		<small>&copy; Styles Conference </small>
-		<nav class="nav">
-		  <ul>
-		    <li><a href="index.html">Home</a></li><!--
-		    --><li><a href="speakers.html">Speakers</a></li><!--
-		    --><li><a href="schedule.html">Schedule</a></li><!--
-		    --><li><a href="venue.html">Venue</a></li><!--
-		    --><li><a href="register.html">Register</a></li>
-		  </ul>
-		</nav>
-	</footer>
-</body>
-</html>
